# fastapi-sql-crud-example

./: .gitignore  Dockerfile  README.md  db.py  dependencies.py  main.py  pyproject.toml
models/: flight_model.py  user_model.py
routers/: flight_route.py  user_route.py
services/: user_service.py
